[gd_scene load_steps=2 format=2]

[ext_resource path="res://Interface/VisionMode.gd" type="Script" id=1]

[node name="VisionMode" type="CanvasModulate" groups=[
"Interface",
]]
visible = false
color = Color( 0.192157, 0.603922, 0.0431373, 1 )
script = ExtResource( 1 )

[node name="NightvisionSound" type="AudioStreamPlayer2D" parent="."]

[node name="ModeCooldown" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="ModeCooldown" to="." method="_on_ModeCooldown_timeout"]
